--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
+- name: 'Roger Comas'
+  github_nickname: 'rogerct'
 - name: 'Boris Paillard'
   github_nickname: 'Papillard'
