finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
 - name: 'Roger Comas'
   github_nickname: 'rogerct'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Evgeniya Kirpicheva'
+  github_nickname: 'evkirp'
